--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,9 @@
         "source.generate.finalModifiers": "explicit",
         "source.fixAll": "explicit"
     },
+    "python.testing.pytestArgs": [
+        "importer"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
