--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{ include = "importer" }]
 python = "^3.11"
 influxdb-client = "^1.43.0"
 requests = "^2.31.0"
+websockets = "^12.0"
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.31.0.10"
