--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{ include = "importer" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+typer = "^0.12.3"
 influxdb-client = "^1.43.0"
 requests = "^2.31.0"
 websockets = "^12.0"
@@ -27,8 +28,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-import = "importer.main:main"
-download = "importer.download:main"
+main = "importer.main:main"
 
 [tool.black]
 line-length = 120
