--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -11,17 +11,20 @@ packages = [{ include = "importer" }]
 python = "^3.11"
 typer = "^0.12.3"
 influxdb-client = "^1.43.0"
-requests = "^2.31.0"
+requests = "^2.32.1"
 websockets = "^12.0"
 
 [tool.poetry.group.dev.dependencies]
-types-requests = "^2.31.0.10"
+types-requests = "^2.32.0.20240521"
 types-tqdm = "^4.66.0.3"
+types-pytz = "^2024.1.0.20240417"
+types-influxdb-client = "^1.43.0.20240519"
 mypy = "^1.6.1"
 black = "^24.3.0"
 nox = "^2023.4.22"
 isort = "^5.12.0"
 pytest = "^7.4.3"
+
 
 [build-system]
 requires = ["poetry-core"]
