--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -11,8 +11,9 @@ packages = [{ include = "importer" }]
 python = "^3.11"
 typer = "^0.12.3"
 influxdb-client = "^1.43.0"
-requests = "^2.32.1"
+requests = "^2.32.2"
 websockets = "^12.0"
+pytz = "^2024.1"
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.32.0.20240521"
