--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -16,7 +16,7 @@ websockets = "^12.0"
 pytz = "^2024.1"
 
 [tool.poetry.group.dev.dependencies]
-types-requests = "^2.32.0.20240521"
+types-requests = "^2.32.0.20240523"
 types-tqdm = "^4.66.0.3"
 types-pytz = "^2024.1.0.20240417"
 types-influxdb-client = "^1.43.0.20240519"
@@ -25,6 +25,7 @@ black = "^24.3.0"
 nox = "^2023.4.22"
 isort = "^5.12.0"
 pytest = "^7.4.3"
+testcontainers = "^4.4.1"
 
 
 [build-system]
