--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
 		"ms-python.python",
 		"ms-python.debugpy",
 		"ms-python.black-formatter",
-		"ms-azuretools.vscode-docker"
+		"ms-azuretools.vscode-docker",
+		"ms-python.mypy-type-checker"
 	]
 }
