--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,10 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "mypy-type-checker.reportingScope": "workspace",
+    "mypy-type-checker.cwd": "${workspaceFolder}/importer",
+    "mypy-type-checker.severity": {
+        "error": "Error",
+        "note": "Information"
+    }
 }
