--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,7 @@
     "python.testing.pytestEnabled": true,
     "mypy-type-checker.reportingScope": "workspace",
     "mypy-type-checker.cwd": "${workspaceFolder}/importer",
-    "mypy-type-checker.severity": {
-        "error": "Error",
-        "note": "Information"
-    }
+    "mypy-type-checker.args": [
+        "--config-file=pyproject.toml"
+    ]
 }
