--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -14,6 +14,7 @@ influxdb-client = "^1.43.0"
 requests = "^2.32.2"
 websockets = "^12.0"
 pytz = "^2024.1"
+tqdm = "^4.66.4"
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.32.0.20240523"
