--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -14,9 +14,10 @@ influxdb-client = "^1.43.0"
 requests = "^2.32.2"
 websockets = "^12.0"
 pytz = "^2024.1"
+tqdm = "^4.66.4"
 
 [tool.poetry.group.dev.dependencies]
-types-requests = "^2.32.0.20240521"
+types-requests = "^2.32.0.20240523"
 types-tqdm = "^4.66.0.3"
 types-pytz = "^2024.1.0.20240417"
 types-influxdb-client = "^1.43.0.20240519"
@@ -25,6 +26,7 @@ black = "^24.3.0"
 nox = "^2023.4.22"
 isort = "^5.12.0"
 pytest = "^7.4.3"
+testcontainers = "^4.4.1"
 
 
 [build-system]
@@ -51,5 +53,21 @@ markers = [
 addopts = [
     "--import-mode=importlib",
     "--strict-markers",
-    "--log-cli-level=debug",
+    #"--log-cli-level=debug",
 ]
+
+
+[tool.mypy]
+explicit_package_bases = true
+namespace_packages = true
+warn_return_any = true
+warn_unused_configs = true
+exclude = []
+disallow_untyped_defs = false
+ignore_missing_imports = true
+check_untyped_defs = true
+disallow_any_unimported = false
+disallow_any_expr = false
+disallow_subclassing_any = true
+disallow_any_generics = false
+disallow_any_explicit = false
