--- a/importer/pyproject.toml
+++ b/importer/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.32.2"
 websockets = "^12.0"
 pytz = "^2024.1"
 tqdm = "^4.66.4"
+pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.32.0.20240523"
