--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
         "source.fixAll": "explicit"
     },
     "python.testing.pytestArgs": [
-        "importer"
+        "tests"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
@@ -17,6 +17,8 @@
         "--config-file=pyproject.toml"
     ],
     "cSpell.words": [
-        "dataframe"
+        "dataframe",
+        "dtype",
+        "iterrows"
     ]
 }
