--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ black = "^24.3.0"
 nox = "^2024.4.15"
 isort = "^5.12.0"
 pytest = "^8.2.2"
+pylint = "^3.2.5"
 testcontainers = "^4.7.0"
 
 
@@ -72,3 +73,45 @@ disallow_any_expr = false
 disallow_subclassing_any = true
 disallow_any_generics = false
 disallow_any_explicit = false
+
+[tool.pylint.main]
+fail-under = 10
+source-roots = ["src", "tests"]
+suggestion-mode = true
+
+[tool.pylint.format]
+max-line-length = 140
+
+[tool.pylint.logging]
+logging-format-style = "new"
+logging-modules = ["logging"]
+
+[tool.pylint."messages control"]
+confidence = [
+    "HIGH",
+    "CONTROL_FLOW",
+    "INFERENCE",
+    "INFERENCE_FAILURE",
+    "UNDEFINED",
+]
+
+disable = [
+    # Defaults
+    "raw-checker-failed",
+    "bad-inline-option",
+    "locally-disabled",
+    "file-ignored",
+    "suppressed-message",
+    "useless-suppression",
+    "deprecated-pragma",
+    "use-symbolic-message-instead",
+    "use-implicit-booleaness-not-comparison-to-string",
+    "use-implicit-booleaness-not-comparison-to-zero",
+    # Custom
+    "missing-function-docstring",
+    "missing-class-docstring",
+    "missing-module-docstring",
+    "logging-fstring-interpolation",
+    "too-few-public-methods",
+    "duplicate-code",
+]
