--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/importer/.venv
-/importer/config.py
+/.venv
+/src/config.py
 /data/
-/importer/.pytest_cache
-/importer/.mypy_cache
-__pycache__
+/__pycache__
+/.mypy_cache
+/.pytest_cache
+__pycache__/
