--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,18 @@
         "source.fixAll": "explicit"
     },
     "python.testing.pytestArgs": [
-        "importer"
+        "tests"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "mypy-type-checker.reportingScope": "workspace",
-    "mypy-type-checker.cwd": "${workspaceFolder}/importer",
+    "mypy-type-checker.cwd": "${workspaceFolder}",
     "mypy-type-checker.args": [
         "--config-file=pyproject.toml"
+    ],
+    "cSpell.words": [
+        "dataframe",
+        "dtype",
+        "iterrows"
     ]
 }
