--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "source.fixAll": "explicit"
     },
     "python.testing.pytestArgs": [
-        "tests"
+        "tests",
+        "--capture=no"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
