--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ websockets = "^12.0"
 pytz = "^2024.1"
 tqdm = "^4.66.4"
 pandas = "^2.2.2"
+polars = {extras = ["plot"], version = "^1.2.1"}
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.32.0.20240523"
