Add polars model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     },
     "python.testing.pytestArgs": [
         "tests",
-        "--capture=no"
+        "--capture=no",
+        "-v"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
