--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ websockets = "^12.0"
 pytz = "^2024.1"
 tqdm = "^4.66.4"
 pandas = "^2.2.2"
-polars = {extras = ["plot"], version = "^1.2.1"}
+polars = { extras = ["plot"], version = "^1.2.1" }
+
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.32.0.20240523"
@@ -30,6 +31,8 @@ isort = "^5.12.0"
 pytest = "^8.2.2"
 pylint = "^3.2.5"
 testcontainers = "^4.7.1"
+jupyterlab = "^4.2.4"
+jedi-language-server = "^0.41.4"           # for jupyter
 
 
 [build-system]
