--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,14 +25,14 @@ types-tqdm = "^4.66.0.3"
 types-pytz = "^2024.1.0.20240417"
 types-influxdb-client = "^1.45.0.20240814"
 mypy = "^1.11.1"
-black = "^24.8.0"
+black = { version = "^24.8.0", extras = ["jupyter"] }
 nox = "^2024.4.15"
 isort = "^5.12.0"
 pytest = "^8.2.2"
 pylint = "^3.2.5"
 testcontainers = "^4.8.0"
 jupyterlab = "^4.2.4"
-jedi-language-server = "^0.41.4"           # for jupyter
+jedi-language-server = "^0.41.4"                      # for jupyter
 
 
 [build-system]
