--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ addopts = [
     "--strict-markers",
     #"--log-cli-level=debug",
 ]
+filterwarnings = ["ignore::DeprecationWarning:reactivex.internal.constants"]
 
 
 [tool.mypy]
