Add dependency for jupyter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pylint = "^3.2.5"
 testcontainers = "^4.8.0"
 jupyterlab = "^4.2.4"
 jedi-language-server = "^0.41.4"                      # for jupyter
+pyarrow = "^17.0.0"                                   # data analysis
 
 
 [build-system]
