--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.12"
 typer = "^0.12.4"
 influxdb-client = "^1.45.0"
 requests = "^2.32.2"
+scrapy = "^2.11.2"
 websockets = "^13.0"
 pytz = "^2024.1"
 tqdm = "^4.66.4"
@@ -34,7 +35,7 @@ testcontainers = "^4.8.0"
 jupyterlab = "^4.2.4"
 pyarrow = "^17.0.0"                                   # data analysis
 jedi-language-server = "^0.41.4"                      # for jupyter
-pip = "^24.2"
+pip = "^24.3.1"
 
 
 [build-system]
